--- a/index.html
+++ b/index.html
@@ -4,32 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-    <link rel="stylesheet" href="/dist/outpout.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Frontend Mentor | Meet landing page</title>
 </head>
 
-<body class="">
-    Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+<body>
+    <img src="assets/logo.svg" alt="Meet">
+    <div class="hero">
+        <img src="assets/desktop/image-hero-left.png">
+        <div class="hero-content">
+            <h1>Group Chat for Everyone</h1>
+            <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+            <button class="btn-primary">Download <span class="accent">v1.3</span></button>
+            <button class="btn-secondary">What is it?</button>
+        </div>
+        <img src="assets/desktop/image-hero-right.png">
+    </div>
 
-    Download v1.3
-    What is it?
+    <div class="separator">01</div>
+    <div class="content">
+        <div class="photos">
+            <img src="assets/desktop/image-woman-in-videocall.jpg" alt="Woman in videocall" class="thumbnail">
+            <img src="assets/desktop/image-women-videochatting.jpg" alt="Women videochatting" class="thumbnail">
+            <img src="assets/desktop/image-men-in-meeting.jpg" alt="Men in meeting" class="thumbnail">
+            <img src="assets/desktop/image-man-texting.jpg" alt="Man texting" class="thumbnail">
+        </div>
+        <div class="text">
+            <p class="overline">Built for modern use</p>
+            <h2>Smarter meetings, all in one place</h2>
+            <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control
+                who
+                can join with invite-only team access, data encryption, and data export.</p>
+        </div>
+    </div>
 
-    01
-    Built for modern use
+    <div class="separator">02</div>
 
-    Smarter meetings, all in one place
+    <div class="spread">
+        <h2>Experience more together</h2>
+        <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+        <button class="btn-secondary">Download <span class="accent">v1.3</span></button>
+    </div>
 
-    Send messages, share files, show your screen, and record your meetings — all in one
-    workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-    02
-    Experience more together
-    Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-    Download v1.3
 </body>
 
 </html>
