--- a/index.html
+++ b/index.html
@@ -13,43 +13,43 @@
 </head>
 
 <body>
-    <img src="assets/logo.svg" alt="Meet">
+    <img src="assets/logo.svg" alt="Meet" class="img-logo">
+    <div class="herotablet"></div>
     <div class="hero">
-        <img src="assets/desktop/image-hero-left.png">
-        <div class="hero-content">
+        <div class="content">
             <h1>Group Chat for Everyone</h1>
             <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
             <button class="btn-primary">Download <span class="accent">v1.3</span></button>
             <button class="btn-secondary">What is it?</button>
         </div>
-        <img src="assets/desktop/image-hero-right.png">
     </div>
 
+    <hr width="1" size="84">
     <div class="separator">01</div>
-    <div class="content">
+
+    <div class="gallery">
         <div class="photos">
             <img src="assets/desktop/image-woman-in-videocall.jpg" alt="Woman in videocall" class="thumbnail">
             <img src="assets/desktop/image-women-videochatting.jpg" alt="Women videochatting" class="thumbnail">
             <img src="assets/desktop/image-men-in-meeting.jpg" alt="Men in meeting" class="thumbnail">
             <img src="assets/desktop/image-man-texting.jpg" alt="Man texting" class="thumbnail">
         </div>
-        <div class="text">
+        <div class="content">
             <p class="overline">Built for modern use</p>
             <h2>Smarter meetings, all in one place</h2>
             <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control
-                who
-                can join with invite-only team access, data encryption, and data export.</p>
+                who can join with invite-only team access, data encryption, and data export.</p>
         </div>
     </div>
 
-    <div class="separator">02</div>
+    <hr class="sep2" width="1" size="84">
+    <div class="separator2">02</div>
 
-    <div class="spread">
+    <footer>
         <h2>Experience more together</h2>
         <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
         <button class="btn-secondary">Download <span class="accent">v1.3</span></button>
-    </div>
-
+    </footer>
 </body>
 
 </html>
